--- a/src/main/resources/assets/moremomostories/lang/zh_cn.lang
+++ b/src/main/resources/assets/moremomostories/lang/zh_cn.lang
@@ -119,7 +119,7 @@ gui.hileb.paper1.desc.10.tip=就好像我真的要死掉一样……别吓我了
 gui.hileb.paper1.desc.11.tip=我一直……运气很好的……
 gui.hileb.paper1.desc.12.tip=芽衣姐……§4我……不想死……
 entity.entity_mm.name=帕朵
-com.hileb.moremomostories.say.1.say=%s……§4我……不想死……
+com.hileb.moremomostories.say.1.say=<帕朵菲利斯>%s……§4我……不想死……
 
 com.hileb.achievement.dream1.title=在记忆里的拯救
 com.hileb.achievement.dream1.desc=具显的场景，是真的，还是假的......
