--- a/src/main/resources/assets/moremomostories/lang/en_us.lang
+++ b/src/main/resources/assets/moremomostories/lang/en_us.lang
@@ -1,99 +1,154 @@
-#PARSE_ESCAPES
-#tabs
-itemGroup.ideallandMiscTab=Sakura of itzmx
+langname.name=zh_cn
+
+# PARSE_ESCAPES
+itemGroup.itzmxMiscTab=More MoMostories
 
 generator.TYPE_ONE=Type One;
 generator.TYPE_TWO=Type Two;
 
-#config
-configgui.idealland.category.Menu0.GeneralConf=General Config
-idealland.conf.general.welcome=Welcome Message Key
 
-#Enchantments
-enchantment.idealland.test_enchantment=Early Access
-
-enchantment.itzmx.aromatic="Aromatic"
-
-#Messages
-idealland.moroon_incoming_herald=[IDL][Warn] The Moroon are interested in your fights.
-idealland.msg.notice_meter_report=[IDL] Moroon notice value: %d, invasion: %d/%d, error:%d
-
-#Potions
-idealland.potion.deadly=Deadly
-idealland.potion.zen_heart=Countless Virtue
-
-
-#Entities
-entity.moroon_tainter.name=Moroon Pathfinder
-
-#Blocks
-tile.idealland_light_basic.name=Idealland Lamp
-
-tile.test.name=Idealland Block A
-
-#Items
-idealland.food.shared.xp_desc=Grants XP: %d
-idealland.gua_enhance_no_free.desc=Use anvil to socket Gua(Elemental)
-idealland.gua_enhance_free.desc=Free Gua Sockets(Direct craft): %d
-
-idealland.gua_enhance_total.desc=Gua Enhance Total: %d
-idealland.shared.press_shift=Hold SHIFT to examine info.
-
-fading.duration.desc=Vanishes after %d seconds
-
-item.debug_test.name=Debug Item
-item.debug_test.desc=For debuging. Not for playing.
-
-item.xie_geta.name=Geta of Mr.Xie
-item.xie_geta.desc.0=Uphill mode. Grants Lv.%s Jump Boost.
-item.xie_geta.desc.1=Flat ground mode. Grants Lv.%s Speed.
-item.xie_geta.desc.2=Down hill mode. Reduces %s fall damage.
-
-item.p2w_goblet.name=P.2.W. Chalice
-item.p2w_goblet.desc=Pay gold to increase your power. (Try crafting it with the 8 elements and gold)
-item.p2w_goblet.contain.desc=Containing %d exp.
-item.p2w_goblet.player.desc=Owner power: Lv.%d (%d/%d exp)
+item.item_card_get_from_null.name=Creating Something Out Of Nothing
+item.item_card_get_from_null.desc1=Play cards for yourself. Touch a card. \N "Everything in the world is born of something, and something is born of nothing" n<Lao Tzu> \n Get a momostroies card. \n Return the raw materials when the momostories are not loaded
+item.item_card_get_from_null.desc2=Play cards for yourself. Touch a card. \N "Everything in the world is born of something, something is born of nothing"  n<Lao Tzu> \n Press and hold § eLShift § f to display more
 
 
 
-item.item_rainbow.name=Rainbow
-item.item_rainbow.desc=Produced by Sakura......
+item.diamond_pickaxe.name=Diamond Pick
 
-item.item_blood_rainbow.name=Rainbow ingot
-item.item_blood_rainbow.desc=Produced by Rainbow
+item.item_main_null.name=Core - Empty
+item.item_main_xk.name=Void Realm
+item.item_main_sy.name=The Power of Time
+item.item_main_tr.name=The Bite of Greed
+item.item_main_wj.name=The Grain of Hardened
 
-item.item_rainbowj.name=Rainbow sword
-item.item_rainbowj.desc=Produced by Rainbow ingot and it is good./n For bbs.
+tile.blackstonebrick.name=Dark Stone Brick
+
+item.item_card_null.name=Card - Empty
+item.item_card_null.desc=Draw something on it.
+
+item.item_card_get_from_null.name="Nothing makes something"
+item.item_card_zfp.name="EntityZFP"
+desc.cardzfp.desc=煮饭婆举高高！~
+desc.cardzfp2.desc=煮饭婆可爱捏！~
+
+item.item_copyer.name=Copier
+desc.item.copyer.desc=Imitated... After all, it is imitated...  n -- Hileb  \n This card is a consumable  \n You can copy the second hand items  \n The time limit is 200 ticks
+desc.item.copyer.desc2=Imitated... is imitated after all...  n -- Hileb  \n Press and hold § eLShift § f to show more
+desc.copyitem.desc=§ e Replica! \N § f has% d * 20 minutes left!
+
+item.item_card_mi.name=The Mirror of Ten Thousand Writings
+item.item_card_mi_item.name=The Mirror of Ten Thousand Writings
+
+
+advancements.itzmxAdvancements.root.title=More MoMostories
+advancements.itzmxAdvancements.root.desc=More MoMostories
+
+advancements.itzmxAdvancements.card.root.title=MoMostories Cards
+advancements.itzmxAdvancements.card.root.desc=Collect the memories cards in More MoMostories!
+
+advancements.itzmxAdvancements.goodluck.title=good luck!
+advancements.itzmxAdvancements.goodluck.desc=Make diamonds in the bottle of fraud!
+advancements.itzmxAdvancements.doublehit.title=Critical hit!
+advancements.itzmxAdvancements.doublehit.desc=Use the diamonds from the bottle of fraud to make a diamond pick and dig out double ores!!
+advancements.itzmxAdvancements.cake.title=Cake!
+advancements.itzmxAdvancements.cake.desc=An endless cake!
+
+
+advancements.itzmxAdvancements.card.getcard.neature.desc=Collect all natural cards!
+advancements.itzmxAdvancements.card.getcard.mysterious.desc=Collect all the mysterious cards!
+advancements.itzmxAdvancements.card.getcard.interference.desc=Collect all interference cards!
 
 
 
+tip.moremomostories.nothingonoffhand.tip=Copy succeeded!
+tip.moremomostories.copysuccessful.tip=The OffHand has no items!
 
-#Skills
-idealland.skill.shared.cool_down_desc=Cooldown: %.1fs
-idealland.skill.shared.power_desc=Damage: %.1f
-idealland.skill.shared.range_desc=Radius: %.1f block
-idealland.skill.shared.duration_desc=Duration: %.1fs
-idealland.skill.shared.error_desc=Error: +-%d
-idealland.skill.shared.level_desc=Level: %d/%d
-idealland.skill.shared.name_format=%s
-idealland.skill.shared.name_format_with_lv=%s Lv.%s %s
-idealland.skill.shared.lv_max=[MAX]
 
-idealland.gua_enhance_list.desc=Earth %s Thunder %s\nWater %s Mountain %s\nLake %s Fire %s\nWind%s Sky%s
-idealland.gua_not_applicable.desc=-
+tooltip.paper.hileb.a.desc=Hileb tried to study the fruits of time.
+item.item_paper_hileb_a.name=Hileb's manuscript
+item.item_food_sysg.name=Years Pot
+tooltip.item_food_sysg.desc=Rich in the power of years  \n Gaga is delicious
 
-idealland.kill_count.desc=Kills: %d
+death.syzg.death=%S tried to swim in the years! It is lost by time.
 
-idealland.skill.msg.cool_down=Cooling Down.
+com.hileb.item.mi.desc=A mirror that magnifies the forces of nature!
+com.hileb.itzm.main.desc=The power of Hileb imitation!
 
-#Death
-#examples
-#death.fell.accident.ladder=%1$s fell off a ladder
-#death.fell.accident.vines=%1$s fell off some vines
-#death.fell.accident.water=%1$s fell out of the water
-#death.fell.accident.generic=%1$s fell from a high place
-#death.fell.killer=%1$s was doomed to fall
-#death.fell.assist=%1$s was doomed to fall by %2$s
-#death.fell.assist.item=%1$s was doomed to fall by %2$s using %3$s
-#death.fell.finish=%1$s fell too far and was finished by %2$s
-#death.fell.finish.item=%1$s fell too far and was finished by %2$s using %3$s
+com.hileb.achievement.IDoNotWantToDie.title=I don't want to die!
+com.hileb.achievement.IDoNotWantToDie.desc=Sister Yayi, I don't want to die
+
+com.hileb.achievement.ItsMustMHY.title=It must be Miha!
+com.hileb.achievement.ItsMustMHY.desc=It must be Miha!
+
+com.hileb.achievement.findcat.desc=Pick up the cat!
+com.hileb.achievement.findcat.title=Pick up the cat!
+
+advancements.itzmxAdvancements.goodluckmaster.title=Cheating Master!
+advancements.itzmxAdvancements.goodluckmaster.desc=Disguise the bottle of fraud as the bottle of luck!
+
+com.hileb.achievement.goodfiretime.title=Battle!
+com.hileb.achievement.goodfiretime.desc=Use the Battle Flag
+
+item.luck_bottle.name=Lucky Bottle
+item.luck_bottle.desc=Use it when you have diamonds in your backpack! You have a chance to obtain two diamonds
+
+com.hileb.achievement.item_card_zfp.title=煮饭婆举高高!
+com.hileb.achievement.item_card_zfp.desc=把煮饭婆举高高~~~
+
+item.item_turn_into.name=Decadent
+item.item_turn_into.tip=Turn magic into decay
+item.item_add_entityzq_item.name=War Flag
+item.item_add_entityzq_item.desc=Battle! Battle! Battle! Battle!
+item.no_can_hit_it.name=With No Chink In One's Armour
+item.no_can_hit_it.tip=Use it, you are invincible!
+item.item_paper_idonotwanttodie.name=§4Paper
+
+tip.item.know.no.desc=§e？？？？
+tooltip.paper1.tooltip=就好像我真的要死掉一样……别吓我了，怎么可能呢……\n我一直……运气很好的……\n§4芽衣姐……我……不想死……
+
+gui.hileb.paper1.desc.1.tip=不……不行……
+gui.hileb.paper1.desc.2.tip=那里面……是……是……
+gui.hileb.paper1.desc.3.tip=是凯文老大消失时的记忆……！
+gui.hileb.paper1.desc.4.tip=杀死凯文老大的人……是……是……
+gui.hileb.paper1.desc.5.tip=嘿……嘿嘿……我最擅长这个嘛……
+gui.hileb.paper1.desc.6.tip=那……我们……我们快点离开吧……？
+gui.hileb.paper1.desc.7.tip=芽衣姐……
+gui.hileb.paper1.desc.8.tip=哎呀，芽……芽衣姐……还是不要说这种话了吧……
+gui.hileb.paper1.desc.9.tip=人家都说……都说这是……一……一语成……成什么来着？
+gui.hileb.paper1.desc.10.tip=就好像我真的要死掉一样……别吓我了，怎么可能呢……
+gui.hileb.paper1.desc.11.tip=我一直……运气很好的……
+gui.hileb.paper1.desc.12.tip=芽衣姐……§4我……不想死……
+entity.entity_mm.name=Pado
+entity.entity_van.name=Van♂ Man
+com.hileb.moremomostories.say.1.say=<帕朵菲利斯>%s……§4我……不想死……
+
+com.hileb.achievement.dream1.title=Saving in memory
+com.hileb.achievement.dream1.desc=The obvious scene, is it true or false
+
+com.hileb.achievement.again1.title=MoMo Knife Club
+com.hileb.achievement.again1.desc=I was knifed again!
+
+entity.entity_zq.name=War Flag
+
+entity.entity_zfp.name=EntityZFP
+
+item.item_putrid_item.name=Rotten items
+item.item_card_five.name=Five Thunder Heavenly Master's Order
+item.item_do_forever.name=Do It Forever
+item.item_do_forever.desc1=One of the three highest technologies in the universe  \nHowever, it seems that the book of showing doesn't want to show it
+com.hileb.achievement.findpaper.title=§4Paper
+com.hileb.achievement.findpaper.desc=Find and read §4 paper
+item.item_scene_1.name=§4 Scenarios
+com.hileb.achievement.scene1.title=§4 Scenarios
+com.hileb.achievement.scene1.desc=Show §4 scenarios
+#momostroies
+moremomostories.conf.apionly=API mode only
+tile.wood_no_leaf.name=Leafless Wood
+tile.unbreakable_hileb_block.name=High Strength Materials
+item.item_11_a.name=Core Manufacturing Technology
+item.item_12_b.name=Fibre Rope
+entity.entity_golden_guide.name=Gold Guard
+com.hileb.achievement.lx.title=Homo story meeting
+com.hileb.achievement.lx.desc=Meet Fellow♂Villagers.
+
+death.attack.van_damage=%1$sMet a Fellow♂Villager。
