--- a/src/main/resources/assets/moremomostories/lang/zh_cn.lang
+++ b/src/main/resources/assets/moremomostories/lang/zh_cn.lang
@@ -373,3 +373,6 @@ tag.13.name=恶魔
 tag.14.name=狂热
 item.moremomostories.blandSaki.name=赤姬
 flammpfeil.slashblade.specialattack.momo.sa_sef=§e淫气释放
+
+enchantment.moremomostories.blood=血染
+enchantment.moremomostories.uu=核辐射
