--- a/src/main/resources/assets/moremomostories/lang/en_us.lang
+++ b/src/main/resources/assets/moremomostories/lang/en_us.lang
@@ -163,7 +163,7 @@ moremomostories.conf.apionly=API mode only
 tile.wood_no_leaf.name=Leafless Wood
 tile.unbreakable_hileb_block.name=High Strength Materials
 item.item_11_a.name=Core Manufacturing Technology
-item.item_12_b.name=Fibre Rope
+item.fiber_wire.name=Fiber Wire
 entity.entity_golden_guide.name=Gold Guard
 com.hileb.achievement.lx.title=Homo story meeting
 com.hileb.achievement.lx.desc=Meet Fellow♂Villagers.
